--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,15 +1,16 @@
 name: drift_crdt
 description: A Flutter-only implementation of a drift CRDT database, based on the `sqlite_crdt` package and `sqflite`.
-version: 1.0.9
+version: 1.0.10
 repository: https://github.com/JanezStupar/drift_crdt.git
 homepage: https://janezstupar.com
 issue_tracker: https://github.com/JanezStupar/drift_crdt/issues
+publish_to: none
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.5.0 <4.0.0'
 
 dependencies:
-  drift: ^2.15.0
+  drift: 2.26.0
   sqflite: ^2.1.0
   path: ^1.8.0
   flutter:
@@ -22,7 +23,7 @@ dependencies:
 dev_dependencies:
   integration_test:
     sdk: flutter
-  flutter_lints: ^3.0.1
+  flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
   drift_testcases:
